--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,9 @@ form[action$="destroy"] button {
   display: flex;
   height: 100%;
   width: 100%;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 #sidebar {
